@@ -177,9 +177,9 @@ their own stock items in addition to those built-in to
       </varlistentry>
 
       <varlistentry>
-	<term><literal>gtk.STOCK_DIALOG_DIRECTORY</literal></term>
+	<term><literal>gtk.STOCK_DIRECTORY</literal></term>
 	<listitem>
-	  <simpara><imagedata fileref="icons/stock_dialog_directory_24.png" format="png"/> Available in GTK+ 2.6 and above.</simpara>
+	  <simpara><imagedata fileref="icons/stock_directory_24.png" format="png"/> Available in GTK+ 2.6 and above.</simpara>
 	</listitem>
       </varlistentry>
 
@@ -705,8 +705,8 @@ containing:</para>
 	</listitem>
 	<listitem>
 	  <simpara>modifier - a modifier mask (see the <link
-linkend="method-gdkevent--get-state"><methodname>get_state</methodname>()</link>
-method for more detail on modifiers)</simpara>
+linkend="gdk-modifier-constants">Modifier Constants</link> section for more
+detail on modifiers)</simpara>
 	</listitem>
 	<listitem>
 	  <simpara>keyval - an integer key value (see <link
