@@ -5,8 +5,9 @@
 <refentry id="class-gtksettings">
   <refnamediv>
     <refname>gtk.Settings</refname>
-    <refpurpose>an object that contains the global settings for
-widgets</refpurpose>
+    <refpurpose>an object that contains the global settings for the
+widgets on a <link
+linkend="class-gdkscreen"><classname>gtk.gdk.Screen</classname></link></refpurpose>
   </refnamediv>
 
   <refsect1>
@@ -342,14 +343,20 @@ above.</entry>
 
     <para>The <link
 linkend="class-gtksettings"><classname>gtk.Settings</classname></link>
-object is a singleton object that stores the values of the global settings.
-The singleton <link
-linkend="class-gtksettings"><classname>gtk.Settings</classname></link>
-object can be retrieved using the <link
-linkend="function-gtk--settings-get-default"><function>settings_get_default</function>()</link>
-function or the <link
+object stores the values of the global settings associated with a <link
+linkend="class-gdkscreen"><classname>gtk.gdk.Screen</classname></link>. The
+<link linkend="class-gtksettings"><classname>gtk.Settings</classname></link>
+object for the default <link
+linkend="class-gdkscreen"><classname>gtk.gdk.Screen</classname></link> can
+be retrieved using the <link
+linkend="function-gtk--settings-get-default"><function>gtk.settings_get_default</function>()</link>
+function. The <link
 linkend="method-gtkwidget--get-settings"><methodname>gtk.Widget.get_settings</methodname>()</link>
-method.</para>
+method returns the <link
+linkend="class-gtksettings"><classname>gtk.Settings</classname></link>
+object of the <link
+linkend="class-gdkscreen"><classname>gtk.gdk.Screen</classname></link> that
+the widget is displayed on.</para>
 
   </refsect1>
 
