@@ -1,3 +1,13 @@
+2004-12-10  John Finlay  <finlay@moeraki.com>
+
+	* pygtk-gtksettings.xml (Description): Change description to indicate
+	that there is one Settings object per GdkScreen (Rafael Villar Burke)
+
+2004-12-09  John Finlay  <finlay@moeraki.com>
+
+	* pygtk-gtk-stock-items.xml (gtk.stock_add): Add reference to
+	Modifier Constants docs.
+
 2004-12-07  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtkwindow.xml (move): Fix example code.
